printing mph values in dataframe

--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 529,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 398,
+     "execution_count": 529,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19,6 +19,7 @@
    "source": [
     "#import packages\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import cv2\n",
     "import time\n",
     "cv2.startWindowThread()\n"
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 530,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 531,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 532,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,106 +66,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 533,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#creating empty array\n",
-    "rect_coordinates = np.array([[],[],[],[]],dtype=np.uint8)\n",
-    "print(rect_coordinates)\n",
+    "# Create an empty DataFrame with columns for x and y velocities\n",
+    "velocities = pd.DataFrame(columns=['x_velocity', 'y_velocity'])\n",
     "prev_x, prev_y = None, None\n",
-    "prev_time = None\n",
-    "#defining rgb range\n",
-    "\n",
-    "lower_color_bound = np.array([0,100,178])\n",
-    "upper_color_bound = np.array([255,255,255])\n"
+    "prev_time = None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 534,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#defining rgb range\n",
+    "\n",
+    "lower_color_bound = np.array([0,100,178])\n",
+    "upper_color_bound = np.array([255,255,255])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 535,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: -11492.201926142207 Velocity in y: -671.9783942493652\n",
-      "Velocity in x: 0.0 Velocity in y: -209.16405272107994\n",
-      "Velocity in x: 65.89616371983121 Velocity in y: 197.6884911594936\n",
-      "Velocity in x: 451.90223374285813 Velocity in y: 159.4949060268911\n",
-      "Velocity in x: 484.74343821606385 Velocity in y: 64.63245842880852\n",
-      "Velocity in x: 508.86509209510456 Velocity in y: 19.825912679030047\n",
-      "Velocity in x: 532.6379318281752 Velocity in y: 6.657974147852189\n",
-      "Velocity in x: 563.7015667075867 Velocity in y: 13.748818700185042\n",
-      "Velocity in x: 553.2643996199779 Velocity in y: 19.75944284357064\n",
-      "Velocity in x: 531.8655193402475 Velocity in y: 0.0\n",
-      "Velocity in x: 524.7787946256966 Velocity in y: 6.32263607982767\n",
-      "Velocity in x: 534.7417232414023 Velocity in y: 0.0\n",
-      "Velocity in x: 552.9700287533117 Velocity in y: 13.165953065555039\n",
-      "Velocity in x: 514.6588252823293 Velocity in y: 12.253781554341174\n",
-      "Velocity in x: 546.3401299547128 Velocity in y: 12.70558441755146\n",
-      "Velocity in x: 567.4844547928826 Velocity in y: 0.0\n",
-      "Velocity in x: 555.2769138388361 Velocity in y: 13.220878900924669\n",
-      "Velocity in x: 575.9617501431717 Velocity in y: 13.090039775981175\n",
-      "Velocity in x: 597.7772393643554 Velocity in y: 6.792923174594948\n",
-      "Velocity in x: 591.278890423204 Velocity in y: 6.719078300263681\n",
-      "Velocity in x: 563.6608437354704 Velocity in y: 12.957720545642996\n",
-      "Velocity in x: 569.1076830940116 Velocity in y: 13.082935243540495\n",
-      "Velocity in x: 555.0420062811693 Velocity in y: 245.25111905447014\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n",
-      "Velocity in x: 0.0 Velocity in y: 0.0\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m ret, frame \u001b[39m=\u001b[39m cap\u001b[39m.\u001b[39mread()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m#regions of interest\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m height, width, _ \u001b[39m=\u001b[39m frame\u001b[39m.\u001b[39;49mshape\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m roi \u001b[39m=\u001b[39m frame[\u001b[39m200\u001b[39m:\u001b[39m900\u001b[39m, \u001b[39m100\u001b[39m:\u001b[39m1800\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m#object detection\u001b[39;00m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
+      "175.70482914340297\n",
+      "36.661356887239556\n",
+      "0.22530535422912829\n"
      ]
     }
    ],
+   "source": [
+    "#conversion factor\n",
+    "disc_length = 8.26 #disc length in inches\n",
+    "distance = 36 #distance of disc from camera, rough guess\n",
+    "\n",
+    "# Approximate field of view (in degrees)\n",
+    "fov = 2 * np.arctan(frame_width / (2 * distance)) * 180 / np.pi\n",
+    "print(fov)\n",
+    "\n",
+    "# Width of the object in pixels\n",
+    "object_width_pixels = abs((disc_length/2) / (np.tan(fov/2)))\n",
+    "print (object_width_pixels)\n",
+    "#calculate conversion rate\n",
+    "conversion_rate = disc_length / object_width_pixels\n",
+    "print(conversion_rate)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 536,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "while True:\n",
     "    # Get current time\n",
     "    current_time = time.time()\n",
     "\n",
     "    ret, frame = cap.read()\n",
-    "    \n",
+    "    if not ret:\n",
+    "        break\n",
     "    #regions of interest\n",
     "    height, width, _ = frame.shape\n",
     "    roi = frame[200:900, 100:1800]\n",
@@ -193,7 +163,7 @@
     "            #print(x,y,w,h)\n",
     "            rect_coordinates = np.append(rect_coordinates,[x,y,w,h])\n",
     "            #rect_coordinates[y:y+h, x:x+w] = 1\n",
-    "            #cv2.rectangle(roi, (x, y), (x + w, y + h), (0,255,0),3)\n",
+    "            cv2.rectangle(roi, (x, y), (x + w, y + h), (0,255,0),3)\n",
     "    #print(rect_coordinates)\n",
     "    \n",
     "    # Check if previous position and time are available\n",
@@ -209,13 +179,25 @@
     "        vx = dx / dt\n",
     "        vy = dy / dt\n",
     "\n",
+    "        \n",
+    "\n",
+    "        # Add the velocity values to the DataFrame\n",
+    "        velocities = pd.concat([velocities, new_data])\n",
+    "\n",
+    "        vx_mph = vx * conversion_rate * 0.44704\n",
+    "        vy_mph = vy * conversion_rate * 0.44704\n",
+    "\n",
+    "        # create a new dataframe with the new velocities\n",
+    "        new_data = pd.DataFrame({'x_velocity': [vx_mph], 'y_velocity': [vy_mph]})\n",
+    "        \n",
     "        # Print the velocity values\n",
-    "        print(\"Velocity in x:\", vx, \"Velocity in y:\", vy)\n",
+    "        # print(\"Velocity in x:\", vx, \"pixels/s, Velocity in y:\", vy, \"pixels/s\")\n",
+    "        #print(\"Velocity in x:\", vx_mph, \"mph, Velocity in y:\", vy_mph, \"mph\")\n",
     "\n",
     "    # Update the previous position and time variables\n",
     "    prev_x, prev_y = x, y\n",
     "    prev_time = current_time\n",
-    "\n",
+    "    \n",
     "    cv2.imshow(\"roi\", roi)\n",
     "    cv2.imshow(\"Mask\", mask)\n",
     "    cv2.imshow(\"maskrgb\",mask_rgb)\n",
@@ -225,12 +207,76 @@
     "    if cv2.waitKey(120) & 0xFF == ord('q'):\n",
     "        break\n",
     "\n",
-    "#print(height, width)\n",
+    "\n",
     "cap.release()\n",
     "output.release()\n",
     "#output2.release()\n",
-    "cv2.destroyAllWindows()\n",
-    "#cv2.waitKey(1)"
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 537,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    x_velocity  y_velocity\n",
+      "0    -0.000000   -0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0 -1170.901779  -68.465617\n",
+      "0     0.000000  -21.134738\n",
+      "0     7.067755   21.203264\n",
+      "0    47.454097   16.748505\n",
+      "0    53.677197    7.156960\n",
+      "0    53.313900    2.077165\n",
+      "0    55.266607    0.690833\n",
+      "0    57.932811    1.412995\n",
+      "0    56.345682    2.012346\n",
+      "0    59.008909    0.000000\n",
+      "0    58.183824    0.701010\n",
+      "0    58.011913    0.000000\n",
+      "0    58.995359    1.404651\n",
+      "0    58.356978    1.389452\n",
+      "0    58.443740    1.359157\n",
+      "0    59.469077    0.000000\n",
+      "0    58.400004    1.390476\n",
+      "0    63.751203    1.448891\n",
+      "0    62.396463    0.709051\n",
+      "0    59.965244    0.681423\n",
+      "0    63.498582    1.459738\n",
+      "0    62.371002    1.433816\n",
+      "0    61.498279   27.173658\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "velocities.to_csv(\"velocities.csv\", index=False)\n",
+    "print(velocities)"
    ]
   }
  ],
