sort of getting velocity

--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 766,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 529,
+     "execution_count": 766,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,12 +22,13 @@
     "import pandas as pd\n",
     "import cv2\n",
     "import time\n",
+    "import math\n",
     "cv2.startWindowThread()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 767,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,22 +42,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 768,
    "metadata": {},
    "outputs": [],
    "source": [
     "#saving output\n",
     "frame_width = int(cap.get(3))\n",
     "frame_height = int(cap.get(4))\n",
-    "size = (frame_width, frame_height)\n",
-    "#print(size)\n",
-    "output = cv2.VideoWriter('output.mp4', cv2.VideoWriter_fourcc(*'mp4v'), 20.0, (1700,700))\n",
+    "size = (frame_width, frame_height)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 769,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#defining size for output videos\n",
+    "output = cv2.VideoWriter('output.mp4', cv2.VideoWriter_fourcc(*'mp4v'), 20.0, (1920,1080))\n",
     "#output2 = cv2.VideoWriter('output2.mp4', cv2.VideoWriter_fourcc(*'MP4V'), 20.0, (1920,1080))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": 770,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 771,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 772,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#defining rgb range\n",
+    "#defining rgb range to detect orange for now\n",
     "\n",
     "lower_color_bound = np.array([0,100,178])\n",
     "upper_color_bound = np.array([255,255,255])"
@@ -91,7 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 773,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #calculating ppi for full 1920x1080 frame\n",
+    "# pixels = frame_width*frame_height\n",
+    "# inches = 24*18\n",
+    "# ppi = math.sqrt(pixels) / math.sqrt(inches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 774,
    "metadata": {},
    "outputs": [
     {
@@ -105,11 +126,11 @@
     }
    ],
    "source": [
-    "#conversion factor\n",
+    "#conversion factor, likely incorrect bc camera and setup need to be calibrated\n",
     "disc_length = 8.26 #disc length in inches\n",
     "distance = 36 #distance of disc from camera, rough guess\n",
     "\n",
-    "# Approximate field of view (in degrees)\n",
+    "#Approximate field of view (in degrees)\n",
     "fov = 2 * np.arctan(frame_width / (2 * distance)) * 180 / np.pi\n",
     "print(fov)\n",
     "\n",
@@ -124,7 +145,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 775,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# disc_diameter = 8.26\n",
+    "# distance = 36\n",
+    "# disc_diameter_pixels = (disc_diameter * frame_height * frame_width) / (distance*2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 776,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,14 +172,14 @@
     "    roi = frame[200:900, 100:1800]\n",
     "    \n",
     "    #object detection\n",
-    "    mask = object_detector.apply(roi)\n",
+    "    mask = object_detector.apply(frame)\n",
     "\n",
     "    #cleaning mask\n",
     "    _, mask = cv2.threshold(mask, 254, 255, cv2.THRESH_BINARY)\n",
     "    contours, _ = cv2.findContours(mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "\n",
     "    #trying rgb threshold\n",
-    "    mask = cv2.cvtColor(roi,cv2.COLOR_BGR2HSV) \n",
+    "    mask = cv2.cvtColor(frame,cv2.COLOR_BGR2HSV) \n",
     "    mask_rgb = cv2.inRange(mask,lower_color_bound,upper_color_bound)\n",
     "    rgb_contours, _ = cv2.findContours(mask_rgb, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "       \n",
@@ -157,15 +189,16 @@
     "        #calculate error, remove small elements\n",
     "        area = cv2.contourArea(cnt)\n",
     "        if area > 500:\n",
-    "            cv2.drawContours(roi, [cnt], -1, (0,255,0), 2)\n",
+    "            cv2.drawContours(frame, [cnt], -1, (0,255,0), 2)\n",
     "            #drawing rectangle around detected objects\n",
     "            x, y, w, h = cv2.boundingRect(cnt)\n",
-    "            #print(x,y,w,h)\n",
     "            rect_coordinates = np.append(rect_coordinates,[x,y,w,h])\n",
-    "            #rect_coordinates[y:y+h, x:x+w] = 1\n",
-    "            cv2.rectangle(roi, (x, y), (x + w, y + h), (0,255,0),3)\n",
-    "    #print(rect_coordinates)\n",
-    "    \n",
+    "            cv2.rectangle(frame, (x, y), (x + w, y + h), (0,255,0),3)\n",
+    "            \n",
+    "    #this is not working\n",
+    "    # disc_length_pixels = w\n",
+    "    # conversion_rate = (1/ppi) * (disc_length / disc_length_pixels)\n",
+    "\n",
     "    # Check if previous position and time are available\n",
     "    if prev_x is not None and prev_y is not None and prev_time is not None:\n",
     "        # Calculate the distance traveled in the x and y directions\n",
@@ -176,10 +209,8 @@
     "        dt = current_time - prev_time\n",
     "\n",
     "        # Calculate the velocity in the x and y directions\n",
-    "        vx = dx / dt\n",
-    "        vy = dy / dt\n",
-    "\n",
-    "        \n",
+    "        vx = (dx / dt) \n",
+    "        vy = (dy / dt)\n",
     "\n",
     "        # Add the velocity values to the DataFrame\n",
     "        velocities = pd.concat([velocities, new_data])\n",
@@ -187,20 +218,21 @@
     "        vx_mph = vx * conversion_rate * 0.44704\n",
     "        vy_mph = vy * conversion_rate * 0.44704\n",
     "\n",
+    "        # Display the velocity values on the output video\n",
+    "        cv2.putText(frame, 'X Velocity: {:.2f} mph'.format(vx_mph), (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
+    "        cv2.putText(frame, 'Y Velocity: {:.2f} mph'.format(vy_mph), (10, 60), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
+    "\n",
     "        # create a new dataframe with the new velocities\n",
     "        new_data = pd.DataFrame({'x_velocity': [vx_mph], 'y_velocity': [vy_mph]})\n",
-    "        \n",
-    "        # Print the velocity values\n",
-    "        # print(\"Velocity in x:\", vx, \"pixels/s, Velocity in y:\", vy, \"pixels/s\")\n",
-    "        #print(\"Velocity in x:\", vx_mph, \"mph, Velocity in y:\", vy_mph, \"mph\")\n",
     "\n",
     "    # Update the previous position and time variables\n",
     "    prev_x, prev_y = x, y\n",
     "    prev_time = current_time\n",
     "    \n",
-    "    cv2.imshow(\"roi\", roi)\n",
-    "    cv2.imshow(\"Mask\", mask)\n",
-    "    cv2.imshow(\"maskrgb\",mask_rgb)\n",
+    "    cv2.imshow(\"frame\", frame)\n",
+    "    #cv2.imshow(\"roi\", roi)\n",
+    "    #cv2.imshow(\"Mask\", mask)\n",
+    "    #cv2.imshow(\"maskrgb\",mask_rgb)\n",
     "    \n",
     "    #output.write(roi)\n",
     "    #output2.write(mask)\n",
@@ -216,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 777,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +256,6 @@
      "output_type": "stream",
      "text": [
       "    x_velocity  y_velocity\n",
-      "0    -0.000000   -0.000000\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
@@ -233,32 +264,33 @@
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0 -1170.901779  -68.465617\n",
-      "0     0.000000  -21.134738\n",
-      "0     7.067755   21.203264\n",
-      "0    47.454097   16.748505\n",
-      "0    53.677197    7.156960\n",
-      "0    53.313900    2.077165\n",
-      "0    55.266607    0.690833\n",
-      "0    57.932811    1.412995\n",
-      "0    56.345682    2.012346\n",
-      "0    59.008909    0.000000\n",
-      "0    58.183824    0.701010\n",
-      "0    58.011913    0.000000\n",
-      "0    58.995359    1.404651\n",
-      "0    58.356978    1.389452\n",
-      "0    58.443740    1.359157\n",
-      "0    59.469077    0.000000\n",
-      "0    58.400004    1.390476\n",
-      "0    63.751203    1.448891\n",
-      "0    62.396463    0.709051\n",
-      "0    59.965244    0.681423\n",
-      "0    63.498582    1.459738\n",
-      "0    62.371002    1.433816\n",
-      "0    61.498279   27.173658\n",
-      "0     0.000000    0.000000\n",
+      "0 -1259.184717 -145.914109\n",
+      "0     0.000000    5.223240\n",
+      "0     0.000000   17.511819\n",
+      "0     0.000000   21.445986\n",
+      "0    30.133716   20.962585\n",
+      "0    40.105727   18.799559\n",
+      "0    46.382567   16.370318\n",
+      "0    50.600780    6.746771\n",
+      "0    52.394119    2.041329\n",
+      "0    53.083499    0.663544\n",
+      "0    53.207474    1.297743\n",
+      "0    55.219961    1.972141\n",
+      "0    57.532417    0.000000\n",
+      "0    54.910174    0.661568\n",
+      "0    54.452693    0.000000\n",
+      "0    53.674611    1.277967\n",
+      "0    55.376448    1.318487\n",
+      "0    54.585910    1.269440\n",
+      "0    55.432760    0.000000\n",
+      "0    52.859333    1.258556\n",
+      "0    57.401440    1.304578\n",
+      "0    56.990934    0.647624\n",
+      "0    55.340915    0.628874\n",
+      "0    59.293481    1.363069\n",
+      "0    57.363936    1.318711\n",
+      "0    53.430635    1.242573\n",
+      "0    56.578765   16.716453\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
