--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,142 +2,147 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import packages\n",
+    "import cv2\n",
     "import numpy as np\n",
-    "import cv2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#open video\n",
-    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/Overhead_Trial_2.mp4')\n",
-    "fps = cap.get(cv2.CAP_PROP_FPS) #get fps\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "from matplotlib import pyplot as plt\n",
+    "from PIL import Image as im\n",
+    "np.set_printoptions(threshold=np.inf)\n",
     "\n",
-    "if cap.isOpened() == False:\n",
-    "    print(\"Cannot open video file.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#saving output\n",
-    "frame_width = int(cap.get(3))\n",
-    "frame_height = int(cap.get(4))\n",
-    "size = (620, 750)\n",
-    "output = cv2.VideoWriter('output.avi', cv2.VideoWriter_fourcc('m','p','4','v'), 10, size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#object detection parameters\n",
-    "object_detector = cv2.createBackgroundSubtractorMOG2(history = 100, varThreshold= 90)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# blob detection\n",
-    "params = cv2.SimpleBlobDetector_Params()\n",
-    " \n",
-    "#threshold\n",
-    "params.minThreshold = 10;\n",
-    "params.maxThreshold = 200; \n",
-    "# area parameters\n",
-    "params.filterByArea = True\n",
-    "params.minArea = 100\n",
-    " \n",
-    "# circular parameters\n",
-    "params.filterByCircularity = True\n",
-    "params.minCircularity = 0.02\n",
-    "#params.maxCircularity = 0.7\n",
-    " \n",
-    "# convexity parameters\n",
-    "params.filterByConvexity = True\n",
-    "params.minConvexity = 0.02\n",
-    "#params.maxConvexity = 0.7\n",
-    "\n",
-    "     \n",
-    "# inertia parameters\n",
-    "params.filterByInertia = True\n",
-    "params.minInertiaRatio = 0.01\n",
-    "\n",
-    "#params.maxInertiaRatio = 0.1\n",
+    "# Initialize the video capture object\n",
+    "cap = cv2.VideoCapture('/Users/jackconnelly/Documents/School/Fall_2022/EGR_314/OpenCV/Kendall_5_trimmed_2.MP4')\n",
+    "# cap = cv2.VideoCapture(0)\n",
     "\n",
     "\n",
-    " \n",
-    "# Create a detector with the parameters\n",
-    "detector = cv2.SimpleBlobDetector_create(params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Define the range of colors for the disc\n",
+    "# yellow range\n",
+    "# lower_color = np.array([196, 208, 25])\n",
+    "# upper_color = np.array([236, 248, 45])\n",
+    "\n",
+    "# orange range\n",
+    "# lower_color = np.array([160, 0, 30])\n",
+    "# upper_color = np.array([255, 255, 100])\n",
+    "\n",
+    "# hsv?\n",
+    "lower_color = np.array([0, 50, 170])\n",
+    "upper_color = np.array([255, 255, 255])\n",
+    "\n",
+    "maxLength = 0\n",
+    "loc = \"\"\n",
+    "centerX = []\n",
+    "centerY = []\n",
     "while True:\n",
+    "    \n",
+    "    # Capture the current frame\n",
     "    ret, frame = cap.read()\n",
-    "    \n",
-    "    #region of interest\n",
-    "    height, width, _ = frame.shape\n",
-    "    #print(height, width)\n",
-    "    roi = frame[400:500, 200:1000]\n",
-    "    \n",
-    "    #object detection\n",
-    "    mask = object_detector.apply(frame)\n",
-    "\n",
-    "    #cleaning mask\n",
-    "    _, mask = cv2.threshold(mask, 254, 255, cv2.THRESH_BINARY)\n",
-    "    contours, _ = cv2.findContours(mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "    \n",
-    "    for cnt in contours:\n",
-    "        #calculate error, remove small elements\n",
-    "        area = cv2.contourArea(cnt)\n",
-    "        if area > 100:\n",
-    "            #cv2.drawContours(roi, [cnt], -1, (0,255,0), 2)\n",
-    "            #drawing rectangle around detected objects\n",
-    "            x, y, w, h = cv2.boundingRect(cnt)\n",
-    "            cv2.rectangle(frame, (x, y), (x + w, y + h), (0,255,0),3)\n",
-    "    \n",
-    "    #blob detection\n",
-    "    keypoints = detector.detect(frame)\n",
-    "    blank = np.zeros((1, 1))\n",
-    "    blobs = cv2.drawKeypoints(frame, keypoints, blank, (0, 0, 255),\n",
-    "                          cv2.DRAW_MATCHES_FLAGS_DRAW_RICH_KEYPOINTS)\n",
-    "    number_of_blobs = len(keypoints)\n",
-    "    text = \"Number of Circular Blobs: \" + str(len(keypoints))\n",
-    "    cv2.putText(blobs, text, (20, 550),\n",
-    "            cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 100, 255), 2)\n",
-    "\n",
-    "    cv2.imshow(\"roi\", roi)\n",
-    "    cv2.imshow(\"Frame\",frame)\n",
-    "    #cv2.imshow(\"Mask\", mask)\n",
-    "    cv2.imshow(\"blobs\", blobs)\n",
-    "    output.write(roi)\n",
-    "    key = cv2.waitKey(120)\n",
-    "    if key == 27:\n",
+    "    if not ret:\n",
     "        break\n",
+    "    # Convert the frame to the hsv color space\n",
+    "    hsv = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\n",
     "\n",
+    "    # Threshold the frame to get only the colors in the specified range\n",
+    "    mask = cv2.inRange(hsv, lower_color, upper_color)\n",
+    "\n",
+    "    # Use morphological transformations to reduce noise\n",
+    "    kernel = np.ones((5, 5), np.uint8)\n",
+    "    mask = cv2.erode(mask, kernel, iterations=1)\n",
+    "    mask = cv2.dilate(mask, kernel, iterations=1)\n",
+    "\n",
+    "    # Find the contours in the mask\n",
+    "    contours, _ = cv2.findContours(mask, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "    x = np.array([])\n",
+    "    y = np.array([])\n",
+    "\n",
+    "    # Find the largest contour\n",
+    "    if len(contours) > 0:\n",
+    "        c = max(contours, key=cv2.contourArea)\n",
+    "\n",
+    "        # Find the center of the contour\n",
+    "        M = cv2.moments(c)\n",
+    "        if M[\"m00\"] != 0:\n",
+    "            cX = int(M[\"m10\"] / M[\"m00\"])\n",
+    "            cY = int(M[\"m01\"] / M[\"m00\"])\n",
+    "            centerX.append(cX)\n",
+    "            centerY.append(cY)\n",
+    "\n",
+    "        else:\n",
+    "            cX, cY = 0, 0\n",
+    "        # Draw the contour and the center of the contour on the frame\n",
+    "        cv2.drawContours(frame, [c], -1, (0, 255, 0), 2)\n",
+    "        cv2.circle(frame, (cX, cY), 7, (255, 255, 255), -1)\n",
+    "        cv2.putText(frame, \"center\", (cX - 20, cY - 20), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 255, 255), 2)\n",
+    "        print(len(contours))\n",
+    "        coord = c.ravel()\n",
+    "        i = 0\n",
+    "        for word in coord:\n",
+    "            if i % 2 == 1:\n",
+    "                i = i + 1\n",
+    "                continue\n",
+    "            comp = np.array((coord[i], coord[i+1]))\n",
+    "            x = np.append(x,coord[i])\n",
+    "            y = np.append(y,coord[i+1])\n",
+    "            j = 0\n",
+    "            for newword in coord:\n",
+    "                if j % 2 == 1:\n",
+    "                    j = j + 1\n",
+    "                    continue\n",
+    "                newComp = np.array((coord[j], coord[j+1]))\n",
+    "                maxLength = max(maxLength, abs(np.linalg.norm(comp - newComp)))\n",
+    "                j = j + 1\n",
+    "            i = i + 1\n",
+    "\n",
+    "    try:\n",
+    "        x = np.subtract(x, np.amin(x) - 1)\n",
+    "        y = np.subtract(y, np.amin(y) - 1)\n",
+    "        # adj1 = np.array((x[y.argmin()], np.amin(y)))\n",
+    "        # adj2 = np.array((x[y.argmax()], np.amax(y)))\n",
+    "        # adj = abs(np.linalg.norm(adj1-adj2))\n",
+    "        # print(adj)\n",
+    "        xmax = int(np.amax(x) + 1)\n",
+    "        ymax = int(np.amax(y) + 1)\n",
+    "        loc = np.zeros((xmax, ymax), dtype=np.int16)\n",
+    "        i = 0\n",
+    "        for num in x:\n",
+    "            loc[int(x[i]),int(y[i])] = 255\n",
+    "            i = i + 1\n",
+    "    except:\n",
+    "        print(\"woops\")\n",
+    "    # Show the frame\n",
+    "    cv2.imshow(\"Frame\", frame)\n",
+    "    cv2.imshow(\"mask\", mask)\n",
+    "    # time.sleep(.3)\n",
+    "    # Exit the loop if the 'q' key is pressed\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "# Release the video capture object and close all windows\n",
     "cap.release()\n",
-    "cv2.destroyAllWindows()"
+    "cv2.destroyAllWindows()\n",
+    "\n",
+    "print(maxLength)\n",
+    "\n",
+    "# immer = im.fromarray(loc, \"BW\")\n",
+    "# immer = im.fromarray(loc.astype('uint8'))\n",
+    "# immer.save(\"image.png\")\n",
+    "inV = []\n",
+    "lastVal = np.array([])\n",
+    "i = 0\n",
+    "coef = ((21/maxLength)*120)* 0.0000062137 * 60 * 60 \n",
+    "for poop in centerX:\n",
+    "    thisVal = np.array((centerX[i], centerY[i]))\n",
+    "    if len(lastVal) == 2:\n",
+    "        inV.append(abs(np.linalg.norm(thisVal - lastVal)))\n",
+    "    lastVal = thisVal\n",
+    "    i = i + 1\n",
+    "inV = np.multiply(inV, coef)\n",
+    "print(inV)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -157,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.0 (v3.11.0:deaf509e8f, Oct 24 2022, 14:43:23) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
